Starting to change alerts to include dep/loc name

--- a/project2/index.html
+++ b/project2/index.html
@@ -66,7 +66,7 @@
       <!-- Create employee form -->
       <div class="modal fade" id="createEmployeeModal" tabindex="-1" aria-labelledby="exampleModalLabel"
         aria-hidden="true">
-        <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-dialog modal-dialog-centered modal-md">
           <div class="modal-content">
             <div class="mb-3" id="createEmployee">
 
@@ -74,8 +74,9 @@
                 <h3 class="text-center">Add new employee</h3>
               </div>
 
-              <div class="modal-body">
-                <form action="" id="formEmployee">
+              <form action="" id="formEmployee">
+                <div class="modal-body">
+
                   <div class="form-floating mb-3">
                     <input type="text" name="formFirstName" id="formFirstName" class="form-control" required>
                     <label for="formFirstName">First Name</label>
@@ -104,13 +105,12 @@
                     </select>
                     <label for="formDepartmentDropdown">Department</label>
                   </div>
-                </form>
-              </div>
+                </div>
 
-              <div class="modal-footer">
-                <input class="btn btn-outline-primary" type="submit" value="Submit">
-                <input class="btn btn-outline-danger" data-bs-dismiss="modal" type="button" value="Cancel">
-              </div>
+                <div class="modal-footer">
+                  <input class="btn btn-outline-primary" type="submit" value="Submit">
+                  <input class="btn btn-outline-danger" data-bs-dismiss="modal" type="button" value="Cancel">
+                </div>
 
               </form>
             </div>
@@ -127,6 +127,7 @@
         <tbody class="template">
 
           <tr id="employeeEntry" class="employeeEntry" data-bs-toggle="modal" data-bs-target="#employeeProfileModal">
+            <span id="employeeEntry2">
             <td><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="blue" class="bi bi-caret-right"
                 viewBox="0 0 16 16">
                 <path
@@ -134,6 +135,7 @@
               </svg><span class="listName"></span></td>
             <td class="listJob"></td>
             <td class="listDepartment"></td>
+          </span>
             <td>
               <button type="button" class="btn btn-outline-primary departmentEditButton" data-bs-toggle="modal"
                 data-bs-target="#employeeProfileEditModal""><svg
@@ -215,31 +217,33 @@
         <div class="modal-content">
           <div id="employeeProfileEdit">
 
+            <form action="" id="employeeEditForm">
+              <div class="modal-body">
 
-            <div class="modal-body">
-              <form action="" if="employeeEditForm">
 
                 <div class="row g-3 align-items-center mb-3">
-                  <div class="col-6">
+                  <div class="col-4">
                     <label for="EmployeeFirstNameEdit" class="col-form-label">First Name</label>
                   </div>
-                  <div class="col-6"><input type="text" class="form-control" name="" id="employeeFirstNameEdit">
+                  <div class="col-8">
+                    <input type="text" class="form-control" name="" id="employeeFirstNameEdit">
                   </div>
                 </div>
 
                 <div class="row g-3 align-items-center mb-3">
-                  <div class="col-6">
+                  <div class="col-4">
                     <label for="employeeLastNameEdit" class="col-form-label text-center">Last Name</label>
                   </div>
-                  <div class="col-6"><input type="text" class="form-control" name="" id="employeeLastNameEdit">
+                  <div class="col-8">
+                    <input type="text" class="form-control" name="" id="employeeLastNameEdit">
                   </div>
                 </div>
 
                 <div class="row g-3 align-items-center mb-3">
-                  <div class="col-6">
+                  <div class="col-4">
                     <label for="formDepartmentDropdownEdit" class="col-form-label">Department</label>
                   </div>
-                  <div class="col-6">
+                  <div class="col-8">
                     <select class="form-select formDepartmentDropdownEdit col text-center mb-3"
                       name="formDepartmentDropdownEdit" id="formDepartmentDropdownEdit">
                       <option value="">Select department</option>
@@ -248,31 +252,32 @@
                 </div>
 
                 <div class="row g-3 align-items-center mb-3">
-                  <div class="col-6">
+                  <div class="col-4">
                     <label for="employeeEmailEdit" class="col-form-label">Email</label>
                   </div>
-                  <div class="col-6">
+                  <div class="col-8">
                     <input type="email" class="form-control" name="" id="employeeEmailEdit">
                   </div>
                 </div>
 
                 <div class="row g-3 align-items-center mb-3">
-                  <div class="col-6">
+                  <div class="col-4">
                     <label for="employeeJobTitleEdit" class="col-form-label">Job Title</label>
                   </div>
-                  <div class="col-6">
+                  <div class="col-8">
                     <input type="text" class="form-control" name="" id="employeeJobTitleEdit">
                   </div>
                 </div>
 
-            </div>
+              </div>
 
-            <div class="modal-footer">
-              <input id="employeeSaveButton" class="btn btn-outline-primary" type="submit" value="Submit">
-              <input class="btn btn-outline-secondary" data-bs-dismiss="modal" type="button" value="Cancel">
-            </div>
+              <div class="modal-footer">
+                <input class="btn btn-outline-primary" type="submit" value="Submit">
+                <input class="btn btn-outline-secondary" data-bs-dismiss="modal" type="button" value="Cancel">
+              </div>
 
-          </form>
+            </form>
+
           </div>
         </div>
       </div>
@@ -302,26 +307,37 @@
                 <h3 class="text-center">Add new department</h3>
               </div>
 
-              <div class="modal-body">
-                <form action="" id="formDepartment">
-                  <div class="form-floating mb-3">
-                    <input type="text" name="formDepartmentName" id="formDepartmentName" class="form-control" required>
-                    <label for="formDepartmentName" class="form-label">Department name</label>
+              <form action="" id="formDepartment">
+                <div class="modal-body">
+
+
+                  <div class="row g-3 align-items-center mb-3">
+                    <div class="col-4">
+                      <label for="formDepartmentName" class="col-form-label">Department Name</label>
+                    </div>
+                    <div class="col-8">
+                      <input type="text" class="form-control" name="" id="formDepartmentName" required>
+                    </div>
                   </div>
 
-                  <div class="form-floating mb-3">
-                    <select class="form-select" name="formLocationDropdown" id="formLocationDropdown">
-                      <option value="">Select location</option>
-                    </select>
-                    <label for="formLocationDropdown">Select Location</label>
+                  <div class="row g-3 align-items-center mb-3">
+                    <div class="col-4">
+                      <label for="formLocationDropdown" class="col-form-label">Select Location</label>
+                    </div>
+                    <div class="col-8">
+                      <select class="form-select" name="" id="formLocationDropdown">
+                        <option value="">Select location</option>
+                      </select>
+                    </div>
                   </div>
-              </div>
+                </div>
 
-              <div class="modal-footer">
-                <input class="btn btn-outline-primary" type="submit" value="Submit">
-                <input class="btn btn-outline-danger" data-bs-dismiss="modal" type="button" value="Cancel">
-              </div>
+                <div class="modal-footer">
+                  <input class="btn btn-outline-primary" type="submit" value="Submit">
+                  <input class="btn btn-outline-danger" data-bs-dismiss="modal" type="button" value="Cancel">
+                </div>
               </form>
+
             </div>
           </div>
         </div>
@@ -348,7 +364,8 @@
                   <path fill-rule="evenodd"
                     d="M1 13.5A1.5 1.5 0 0 0 2.5 15h11a1.5 1.5 0 0 0 1.5-1.5v-6a.5.5 0 0 0-1 0v6a.5.5 0 0 1-.5.5h-11a.5.5 0 0 1-.5-.5v-11a.5.5 0 0 1 .5-.5H9a.5.5 0 0 0 0-1H2.5A1.5 1.5 0 0 0 1 2.5v11z" />
                 </svg></button>
-              <button id="deleteDepartment" type="button" class="btn btn-outline-danger deleteDepartment"><svg
+              <button id="deleteDepartment" type="button" class="btn btn-outline-danger deleteDepartment" data-bs-toggle="modal"
+              data-bs-target="#departmentDeleteModal"><svg
                   xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
                   class="bi bi-trash3-fill" viewBox="0 0 16 16">
                   <path
@@ -364,15 +381,16 @@
       </table>
     </div>
 
-
-
-
     <!-- Department edit page -->
     <div class="modal fade" id="departmentEditModal" tabindex="-1" aria-labelledby="exampleModalLabel"
       aria-hidden="true">
       <div class="modal-dialog modal-dialog-centered">
         <div class="modal-content">
           <div id="departmentEdit" class="text-center">
+
+            <div class="modal-header">
+              <h3 id="departmentEditHeader"></h3>
+            </div>
 
             <div class="modal-body">
               <div class="row">
@@ -487,19 +505,30 @@
         <div class="modal-content">
           <div id="locationsEdit" class="text-center">
 
+            <div class="modal-header">
+              <h2 id="locationEditHeader"></h2>
+            </div>
+
+            <form action="" id="locationsEditForm">
             <div class="modal-body">
-              <div class="row">
-                <div class="col text-center">Location name</div>
-                <div class="col text-center input-group mb-3"><input type="text" class="form-control" name=""
-                    id="locationNameEdit"></div>
+
+
+                <div class="row g-3 align-items-center mb-3">
+                  <div class="col-4">
+                    <label for="locationNameEdit" class="col-form-label">Location name</label>
+                  </div>
+                <div class="col-8">
+                  <input type="text" class="form-control" name="" id="locationNameEdit">
+                </div>
               </div>
+
             </div>
 
             <div class="modal-footer">
-              <button id="locationSaveButton" type="button" class="btn btn-outline-primary">Save</button>
-              <button id="locationCancelButton" type="button" class="btn btn-outline-danger locationCancelButton"
-                data-bs-dismiss="modal">Cancel</button>
+              <input class="btn btn-outline-primary" type="submit" value="Save">
+              <input class="btn btn-outline-secondary" data-bs-dismiss="modal" type="button" value="Cancel">
             </div>
+          </form>
           </div>
         </div>
       </div>
