--- a/project2/index.html
+++ b/project2/index.html
@@ -137,8 +137,7 @@
             <td class="listDepartment"></td>
           </span>
             <td>
-              <button type="button" class="btn btn-outline-primary departmentEditButton" data-bs-toggle="modal"
-                data-bs-target="#employeeProfileEditModal""><svg
+              <button type="button" class="btn btn-outline-primary employeeEditButton"><svg
                   xmlns=" http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
                 class="bi bi-pencil-square" viewBox="0 0 16 16">
                 <path
@@ -356,7 +355,7 @@
             <td class="locationName"></td>
 
             <td>
-              <button id="departmentEditButton" type="button" class="btn btn-outline-primary departmentEditButton"
+              <button type="button" class="btn btn-outline-primary departmentEditButton"
                 data-bs-toggle="modal" data-bs-target="#departmentEditModal"><svg xmlns="http://www.w3.org/2000/svg"
                   width="16" height="16" fill="currentColor" class="bi bi-pencil-square" viewBox="0 0 16 16">
                   <path
@@ -364,8 +363,7 @@
                   <path fill-rule="evenodd"
                     d="M1 13.5A1.5 1.5 0 0 0 2.5 15h11a1.5 1.5 0 0 0 1.5-1.5v-6a.5.5 0 0 0-1 0v6a.5.5 0 0 1-.5.5h-11a.5.5 0 0 1-.5-.5v-11a.5.5 0 0 1 .5-.5H9a.5.5 0 0 0 0-1H2.5A1.5 1.5 0 0 0 1 2.5v11z" />
                 </svg></button>
-              <button id="deleteDepartment" type="button" class="btn btn-outline-danger deleteDepartment" data-bs-toggle="modal"
-              data-bs-target="#departmentDeleteModal"><svg
+              <button type="button" class="btn btn-outline-danger deleteDepartment"><svg
                   xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
                   class="bi bi-trash3-fill" viewBox="0 0 16 16">
                   <path
