--- a/project2/index.html
+++ b/project2/index.html
@@ -126,7 +126,7 @@
 
         <tbody class="template">
 
-          <tr id="employeeEntry" class="employeeEntry" data-bs-toggle="modal" data-bs-target="#employeeProfileModal">
+          <tr id="employeeEntry" class="employeeEntry">
             <span id="employeeEntry2">
             <td><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="blue" class="bi bi-caret-right"
                 viewBox="0 0 16 16">
@@ -146,7 +146,7 @@
                   d="M1 13.5A1.5 1.5 0 0 0 2.5 15h11a1.5 1.5 0 0 0 1.5-1.5v-6a.5.5 0 0 0-1 0v6a.5.5 0 0 1-.5.5h-11a.5.5 0 0 1-.5-.5v-11a.5.5 0 0 1 .5-.5H9a.5.5 0 0 0 0-1H2.5A1.5 1.5 0 0 0 1 2.5v11z" />
                 </svg>
               </button>
-              <button type="button" class="btn btn-outline-danger deleteEmployee"><svg
+              <button type="button" class="btn btn-outline-danger employeeDeleteButton"><svg
                   xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
                   class="bi bi-trash3-fill" viewBox="0 0 16 16">
                   <path
