added minified files

--- a/project2/index.html
+++ b/project2/index.html
@@ -13,7 +13,7 @@
   <link rel="stylesheet" href="libs/css/bootstrap.min.css">
 
   <!-- Style sheet -->
-  <link rel="stylesheet" href="libs/css/style.css">
+  <link rel="stylesheet" href="libs/css/style.min.css">
 </head>
 
 <body>
@@ -551,7 +551,7 @@
 
   <!-- My own JS -->
   <script src="libs/js/jquery-3.6.0.min.js"></script>
-  <script src="libs/js/script.js"></script>
+  <script src="libs/js/script.min.js"></script>
 
 
 </body>
